# easylog

./: README.md  pyproject.toml
easylog/: __init__.py  easylog.py
