[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "easylog"
version = "1.0.0"
authors = [
  {name="Kiber"},
]
description = "Simple python logger"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable"
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/Kiber2009/easylog"
Documentation = "https://github.com/Kiber2009/easylog/wiki"
Repository = "https://github.com/Kiber2009/easylog.git"
Issues = "https://github.com/Kiber2009/easylog/issues"
Changelog = "https://github.com/Kiber2009/easylog/blob/master/CHANGELOG.md"